2004-05-04  Pawel Salek

	* libbalsa/folder-scanners.c: report IMAP server messages.
	* libbalsa/imap-server.[hc],libbalsa.h: ditto.
	* libbalsa/mailbox.[ch]: more detailed error messages.
	* libbalsa/mailbox_{imap,maildir,mbox,mh,pop3}.c: ditto.
	* libbalsa/send.c: adjust to changed API.
	* libbalsa/imap/{auth-cram,imap-auth}.c:
	* libbalsa/imap/imap{-handle.c,_private.h}:
	store last server msg.
	* libbalsa/imap/pop3.c: respect DISABLE_APOP flag.
	* src/balsa-index.[hc]: adjust to changed API.
	* src/filter-run-dialog.c:
	* src/{main,sendmsg}-window.c: ditto.
	* src/mailbox-conf.c: reenable APOP disabling.

2004-05-03  Pawel Salek

	* configure.in: use GTK_CHECK_VERSION instead of HAVE_GTK24.
	* libbalsa/filter-funcs.c: use reentrant localtime_r().
	* libbalsa/rfc3156.c: ditto.
	* src/filter-edit-callbacks.c: ditto.
	* libbalsa/libbalsa.[ch]: move libbalsa_date_to_gchar() and
	libbalsa_get_icon_from_flags() here.
	* libbalsa/mailbox.[hc]: implement LibBalsaMailboxEntry to reduce
	memory usage.
	* libbalsa/mailbox_{imap,local,maildir,mbox,mh,pop3}.c: use it.
	* libbalsa/message.[ch]: add code to aid Message reference debugging.
	* libbalsa/send.c: ref and unref correctly.
	* src/{balsa-index,main-window,sendmsg-window}.c: ditto.

2004-04-29  Pawel Salek

	* configure.in: INTLTOOL needed for FC2.
	* src/sendmsg-window.c: postpone messages very carefully.
	* bootstrap.sh: cheap autogen.sh replacement.

2004-04-27 11:07  PeterB

	* libbalsa/rfc3156.c: build --with-gpgme --disable-threads.

2004-04-26 20:00  PeterB

	* libbalsa/filter-file.c, libbalsa/filter-funcs.c,
	libbalsa/filter.h, libbalsa/mailbox.c, src/filter-edit-callbacks.c,
	src/save-restore.c: ease migration of filters from 2.0-style config
	to 2.1-style.

2004-04-25 11:35  PeterB

	* libbalsa/send.c: check for error return from
	libbalsa_mailbox_open.

2004-04-24  Carlos Morgado  <chbm gnome.org>

	* libbalsa/Makefile.am: back out reintroduction of _DEPRECATED, 
	we're not trying to be 2.6 clean yet
